Fix spacing for spot body sub-content

--- a/frontend/src/components/SpotBodyContent/SpotBodyContent.css
+++ b/frontend/src/components/SpotBodyContent/SpotBodyContent.css
@@ -79,6 +79,7 @@
 
 .subcontent_wrapper {
     display: flex;
+    justify-content: space-between;
 }
 
 .booking_card_STANDIN {
